--- a/blogWeb/src/app/app.component.html
+++ b/blogWeb/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar color="primary">
   <button
     mat-icon-button
     class="example-icon"
@@ -6,8 +6,10 @@
   >
     <mat-icon>menu</mat-icon>
   </button>
-  <span>My App</span>
+  <span routerLink="/">My App</span>
   <span class="example-spacer"></span>
+
+  <button mat-fab extended routerLink="/create-post">Create Post</button>
   <button
     mat-icon-button
     class="example-icon favorite-icon"
@@ -23,3 +25,5 @@
     <mat-icon>share</mat-icon>
   </button>
 </mat-toolbar>
+
+<router-outlet></router-outlet>
